@@ -5,7 +5,6 @@ $Id$
 - - - - - - - - - - - - - - - - - - - - - */
 
 #typo3-topbar {
-	height: 42px;
 	z-index: 200;
 }
 
